<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Registro">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:id="@+id/ivRegisterLogo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/nombre"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:backgroundTint="#7B1FA2"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/apellido"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:backgroundTint="#7B1FA2"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/etrEmail"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:backgroundTint="#7B1FA2"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etrPassword"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/contrase_a"/>

    <EditText
        android:id="@+id/etrConfirmPassword"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/confirmar_contrase_a"/>

    <TextView
        android:id="@+id/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_al_iniciar_sesi_n"
        android:textColor="#C71A1A"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:backgroundTint="#7B1FA2"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>

