<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levanf"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/usuario"
        android:padding="10dp"
        android:backgroundTint="#7B1FA2"
        android:layout_marginBottom="15dp" />

    
    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="10dp"
        android:backgroundTint="#7B1FA2"
        android:layout_marginBottom="20dp" />

    
    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:backgroundTint="#7B1FA2"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
