<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <TextView android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:textSize="48sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        />

    <TextView android:id="@+id/tvRadial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/radial"
        android:textAlignment="center"
        />

    <ImageButton android:id="@+id/btnRadial"
        android:layout_width="@dimen/altura_imagen"
        android:layout_height="@dimen/altura_imagen"
        android:layout_marginBottom="45dp"
        android:layout_gravity="center"
        />

    <TextView android:id="@+id/tvAxial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/axial"
        android:textAlignment="center"
        />

    <ImageButton android:id="@+id/btnAxial"
        android:layout_width="@dimen/altura_imagen"
        android:layout_height="@dimen/altura_imagen"
        android:layout_gravity="center"
        />

</LinearLayout>