<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottomSheet"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_total"
    android:gravity="fill_vertical|center"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 "
            android:textColor="#7B1FA2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grados"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/generar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:enabled="false"
        android:text="@string/generar_svaj"
        android:textColor="@android:color/white" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graficaPruebas"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="18dp" />
</LinearLayout>